// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render component correctly 1`] = `
<Fragment>
  <Connect(Counter)
    difficulty={20}
    score={23}
    used={
      Array [
        "two",
        "three",
        "four",
      ]
    }
  />
  <form
    className="band-input-form"
    onSubmit={[Function]}
  >
    <input
      autoCapitalize="none"
      autoComplete="off"
      autoCorrect="off"
      autoFocus={false}
      className="band-input"
      maxLength="50"
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="press to type"
      spellCheck={false}
      type="text"
      value=""
    />
  </form>
  <ForwardRef(MotionComponent)
    animate={
      Object {
        "scale": Array [
          null,
          1.3,
          1,
        ],
      }
    }
    className="previous"
    transition={
      Object {
        "duration": 1,
      }
    }
  >
    O
  </ForwardRef(MotionComponent)>
</Fragment>
`;

exports[`should render component correctly with value for previous2 1`] = `
<Fragment>
  <Connect(Counter)
    difficulty={20}
    score={23}
    used={
      Array [
        "two",
        "three",
        "four",
      ]
    }
  />
  <form
    className="band-input-form"
    onSubmit={[Function]}
  >
    <input
      autoCapitalize="none"
      autoComplete="off"
      autoCorrect="off"
      autoFocus={false}
      className="band-input"
      maxLength="50"
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="press to type"
      spellCheck={false}
      type="text"
      value=""
    />
  </form>
  <div
    className="previous"
  >
    13 or N
  </div>
</Fragment>
`;

exports[`should update state.band and rerender input value when band-input changes 1`] = `
<Fragment>
  <Connect(Counter)
    difficulty={20}
    score={23}
    used={
      Array [
        "two",
        "three",
        "four",
      ]
    }
  />
  <form
    className="band-input-form"
    onSubmit={[Function]}
  >
    <input
      autoCapitalize="none"
      autoComplete="off"
      autoCorrect="off"
      autoFocus={false}
      className="band-input"
      maxLength="50"
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="press to type"
      spellCheck={false}
      type="text"
      value="one"
    />
  </form>
  <ForwardRef(MotionComponent)
    animate={
      Object {
        "scale": Array [
          null,
          1.3,
          1,
        ],
      }
    }
    className="previous"
    transition={
      Object {
        "duration": 1,
      }
    }
  >
    O
  </ForwardRef(MotionComponent)>
</Fragment>
`;
